module_4/homework-20240623/ingress/ingressclass.yaml
# homework-20240623/ingress/ingressclass.yaml

apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
